# sark

./: Cargo.toml  README.md
client/: Cargo.toml  build.rs
client/src/: lib.rs
client/src/connector/: client.rs  codec.rs  error.rs  mod.rs  pool.rs  redirect.rs  retry.rs  session.rs
client/tests/: connector_chunked.rs  connector_decompress.rs  connector_deferred.rs  connector_get.rs  connector_limits.rs  connector_pool.rs  connector_pool_leak.rs  connector_redirect.rs
client/tests/common/: mod.rs
core/: Cargo.toml
core/src/: lib.rs  simd.rs  test_util.rs
core/src/error/: mod.rs  tests.rs
core/src/http/: body_kind.rs  compress.rs  field.rs  huffman.rs  mod.rs  prefixed_int.rs  varint.rs
core/src/http/codec/: header_utils.rs  mod.rs
core/src/http/codec/decode/: head.rs  headers.rs  mod.rs  request_head.rs  tests.rs
core/src/http/codec/decode/chunked/: mod.rs  parse.rs
core/src/http/codec/encode/: mod.rs  tests.rs  wire.rs
core/src/http/head/: apply.rs  byte.rs  error.rs  flags.rs  input.rs  known_header.rs  mod.rs  parsed.rs  visitor.rs  well_known.rs
core/src/http/request/: mod.rs  tests.rs
core/src/http/response/: body.rs  chunked.rs  covariance.rs  encoded.rs  fixed.rs  header.rs  header_name.rs  hot.rs  mod.rs  mono.rs  never_stream.rs  owned.rs  owned_shape.rs  response.rs  serve.rs  shape.rs  static_response.rs  stream.rs  tests.rs
core/src/http/response/direct/: head.rs  headers.rs  mod.rs  plan.rs  value.rs
core/src/http/response/wire_emit/: consts.rs  framing.rs  head_write.rs  headers.rs  mod.rs  out.rs  writer.rs
core/src/http/scan/: aarch64.rs  mod.rs  scalar.rs  x86_64.rs
core/src/utils/: bytes.rs
core/tests/: brotli.rs  decode_fuzz.rs  direct_header_layout.rs  field_block.rs  gzip_response.rs  header_lines.rs  header_scan.rs  header_utils.rs  http_test.rs  negative_tests.rs  prefixed_int.rs  smuggling_tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: head_differential.rs
grpc/: Cargo.toml
grpc-build/: Cargo.toml
grpc-build/src/: lib.rs
grpc/src/: client.rs  codec.rs  frame.rs  headers.rs  lib.rs  metadata.rs  server.rs  status.rs
grpc/src/client/: call.rs  egress.rs  ingress.rs  mod.rs  request.rs
grpc/src/server/: call.rs  egress.rs  mod.rs
grpc/tests/: buffer_limits.rs  buffered.rs  client_capacity.rs  client_delivery.rs  client_message_path.rs  header_allocations.rs  liveness.rs  server_capacity.rs  service_routes.rs
h2/: Cargo.toml
h2/examples/: echo_server.rs
h2/src/: client.rs  conn.rs  egress.rs  flow.rs  frame.rs  ingress.rs  lib.rs  role.rs  stream.rs  stream_registry.rs  tuning.rs  validate.rs
h2/src/hpack/: dynamic_table.rs  integer.rs  mod.rs  static_table.rs  string.rs
h2/src/server/: app.rs  body.rs  connection.rs  driver.rs  mod.rs  scheduler.rs  task.rs
h2/tests/: buffer_capacity.rs  client_adapter.rs  conn.rs  conn_stream.rs  data_parts.rs  flow.rs  frame.rs  hpack.rs  server_allocations.rs  server_assembler.rs  stream.rs  validation.rs
h3/: Cargo.toml
h3/src/: conn.rs  dope.rs  frame.rs  lib.rs  stream.rs  transport.rs
h3/src/qpack/: instruction.rs  mod.rs  static_table.rs  table.rs
h3/tests/: conn_bridge.rs  qpack_fields.rs  router_response.rs  server_e2e.rs
json/: Cargo.toml
json/src/: body.rs  depth.rs  encode.rs  error.rs  lib.rs  parse.rs  response.rs  scan.rs  scratch.rs  traits.rs
json/tests/: encode_escape.rs  scan_number.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
sark/: Cargo.toml
sark/benches/: head_parse.rs
sark/examples/: download.rs  leaderboard.rs  pg.rs  redis.rs  standalone_smoke.rs
sark/examples/support/: mod.rs
sark/src/: app.rs  build.rs  date.rs  fs.rs  lib.rs  middleware.rs  timer.rs
sark/src/dispatch/: conn_state.rs  driver.rs  egress.rs  invocation.rs  mod.rs  pipeline.rs  preser.rs  requests.rs  response_cache.rs  routes.rs  routing.rs  tasks.rs
sark/src/fiber/: mod.rs  request_domain.rs
sark/src/fs/: access.rs  cache.rs  encoding.rs  flight.rs  loader.rs  mod.rs  resolver.rs
sark/src/parser/: framer.rs  fused_head.rs  mod.rs
sark/src/parser/head/: header.rs  mod.rs  query.rs  value.rs
sark/src/request/: chain.rs  chain_ref.rs  mod.rs  path.rs  storage.rs
sark/src/routes/: method.rs  mod.rs  path.rs
sark/src/service/: manifold.rs  mod.rs  plan.rs  request_impl.rs  spec.rs
sark/tests/: async_body_kind.rs  async_response_compile.rs  body_macro.rs  cl_overflow.rs  generated_route_storage.rs  handler_async_owned_body.rs  handler_keep_alive.rs  handler_macro_hygiene.rs  handler_retained_req.rs  handler_sleep.rs  handler_state_only.rs  handler_stream_pending.rs  handler_stream_response.rs  handler_two_awaits.rs  handler_wake_projection.rs  https_keepalive_send.rs  json_encode.rs  json_nested.rs  json_response_allocations.rs  middleware.rs  request_glue_hardening.rs  route.rs  router_agnostic.rs  serve_dir.rs  serve_dir_async.rs  skip_headers.rs  slowloris.rs  smoke.rs  stream_discard.rs  variance.rs  worker_shutdown.rs  ws_fragment.rs  ws_smoke.rs
sark/tests/common/: mod.rs
sark/tests/support/: mod.rs
sark/tests/ui/: app_cannot_outlive_state_and_timer.rs  app_cannot_outlive_state_and_timer.stderr  async_response_borrowed.rs  async_response_borrowed.stderr  body_macro_invalid.rs  body_macro_invalid.stderr  request_borrow_cannot_escape_task.rs  request_borrow_cannot_escape_task.stderr  response_header_validation.rs  response_header_validation.stderr  routing_requires_pin.rs  routing_requires_pin.stderr  serve_dir_runtime_cannot_clone.rs  serve_dir_runtime_cannot_clone.stderr
ws/: Cargo.toml
ws/src/: client.rs  crypto.rs  fragment.rs  frame.rs  lib.rs  mask.rs
ws/src/client/: handshake.rs  masking.rs  mod.rs
ws/src/server/: app.rs  mod.rs
ws/tests/: echo_fastpath.rs  mask.rs  protocol.rs
ws/tests/common/: mod.rs
