[workspace]
resolver = "2"
exclude = [
    "fuzz",
]
members = [
    "client",
    "core",
    "gen",
    "grpc",
    "grpc-build",
    "h2",
    "h3",
    "json",
    "protocol",
    "sark",
    "ws",
]

[workspace.package]
edition = "2024"
version = "0.10.0"
description = "the L7 layer for dope"
repository = "https://github.com/dope-rs/sark"
license = "MIT"
authors = ["inq <gofiri@gmail.com>"]

[workspace.dependencies]
dope = "0.9"
dope-net = "0.9"
dope-extra = "0.9"
dope-fiber = "0.9"
dope-gen = "0.9"
dope-tls = "0.13"
o3 = "0.6"
pin-project = "1"
prost = "0.14.4"
prost-build = "0.14.4"
sark-core = { path = "core", version = "0.10" }
sark-gen = { path = "gen", version = "0.10" }
sark-h2 = { path = "h2", version = "0.10" }
sark-json = { path = "json", version = "0.10" }
sark-protocol = { path = "protocol", version = "0.10" }
sark-ws = { path = "ws", version = "0.10" }
sark = { path = "sark", version = "0.10" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = "line-tables-only"
