[package]
name = "sark-client"
version.workspace = true
edition.workspace = true
description = "Simple Asynchronous Rust webKit - Client"
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
sark-core.workspace = true
dope.workspace = true
dope-net.workspace = true
dope-fiber.workspace = true
dope-gen.workspace = true
o3.workspace = true
cartel-core = "0.5"
http = "1.4.2"
flate2 = "1"

[dev-dependencies]
dope-extra.workspace = true
pin-project.workspace = true
