[package]
name = "sark-client"
version.workspace = true
edition.workspace = true
description = "Simple Asynchronous Rust webKit - Client"
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
sark-core.workspace = true
dope.workspace = true
dope-net.workspace = true
dope-fiber.workspace = true
dope-gen.workspace = true
o3.workspace = true
cartel-core = "0.8"
http = "1.4.2"

[dev-dependencies]
dope-extra.workspace = true
flate2 = "1"
pin-project.workspace = true
