[package]
name = "sark-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
o3.workspace = true
brotli = { version = "8", default-features = false, features = ["std"] }
http = "1.4.2"
httparse = "1.10.1"
libdeflater = "1.25"
memchr = "2.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_urlencoded = "0.7"
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
libdeflater = "1.25"

