[package]
name = "sark-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dope-fiber.workspace = true
o3.workspace = true
sark-protocol.workspace = true
http = "1.4.2"
httparse = "1.10.1"
libdeflate-sys = "1.25"
memchr = "2.8"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
libdeflater = "1.25"
