[package]
name = "sark-grpc-build"
version.workspace = true
edition.workspace = true
description = "prost-build service glue for sark-grpc"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.107"
prost-build.workspace = true
quote = "1.0.47"
syn = { version = "3.0.3", features = ["full"] }
