[package]
name = "sark-h2"
version.workspace = true
edition.workspace = true
description = "HTTP/2 protocol primitives + client/server bootstrap for sark stack"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
shin = "0.1.0"
sark-core.workspace = true
dope.workspace = true
dope-extra.workspace = true
dope-gen.workspace = true
dope-tls.workspace = true
o3.workspace = true
pin-project.workspace = true

