[package]
name = "sark"
version.workspace = true
edition.workspace = true
description = "Simple Asynchronous Rust webKit - Server"
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
sark-core.workspace = true
sark-gen.workspace = true
sark-json.workspace = true
dope.workspace = true
dope-extra.workspace = true
dope-gen.workspace = true
o3.workspace = true
dope-tls.workspace = true
shin = "0.8"
http = "1.4.2"
httparse = "1.10.1"
memchr = "2.8"
pin-project.workspace = true

[dev-dependencies]
cartel-redis = "0.3"
cartel-pg = "0.3"
cartel-gen = "0.3"
sark-ws.workspace = true
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "head_parse"
harness = false

