[package]
name = "sark"
version.workspace = true
edition.workspace = true
description = "Simple Asynchronous Rust webKit - Server"
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
sark-core.workspace = true
sark-gen.workspace = true
sark-json.workspace = true
dope.workspace = true
dope-net.workspace = true
dope-fiber.workspace = true
dope-extra.workspace = true
dope-gen.workspace = true
o3.workspace = true
dope-tls.workspace = true
shin = "0.10"
http = "1.4.2"
httparse = "1.10.1"
memchr = "2.8"
pin-project.workspace = true

[dev-dependencies]
cartel-redis = "0.6"
cartel-pg = "0.6"
cartel-gen = "0.6"
sark-ws.workspace = true
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
trybuild = "1"

[[bench]]
name = "head_parse"
harness = false
