[package]
name = "sark-ws"
version.workspace = true
edition.workspace = true
description = "WebSocket protocol primitives + client/server bootstrap for sark stack"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
sark-core.workspace = true
dope.workspace = true
dope-extra.workspace = true
dope-gen.workspace = true
o3.workspace = true
pin-project.workspace = true

